--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -1,2 +1,9 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+In diesem Versuch wurde zunächst die Charakteristik des verwendeten Zählrohres bestimmt. Dabei wurde eine Plateaulänge $L = \qty{270}{\volt}$ mit einer Steigung von 
+$\qty{1.25+-0.22}{\percent\per\volt}$ bestimmt. Diese Werte zeugen von einem breiten Messintervall mit einer relativ geringen Steigung. Daher genügt das verwendete 
+Zählrohr den Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
+
+
+Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:Plot1.pdf} eine annähernd linearer Zusammenhang etnommen werden. Dieser stimmt mit 
+dem erwartetem Aussehen der Kurve überein weshalb diese Bestimmung im Rahmen der Messgenauigkeit als gelungen angenommen werden kann.
