boi ich hab die nase voll von scheiß protokollen ich geh jz schmollen ne dicke lunte rollen und rumtollen

--- a/v703/content/auswertung.tex
+++ b/v703/content/auswertung.tex
@@ -41,7 +41,10 @@ welche zum Plateau gezählt werden. Sie lautet $L = \qty{270}{\volt}$
 
 \subsection{Untersuchung der Nachentladung}
 \label{subsec:Nachentladung}
-
+Der zeitliche Abstand zwischen dem Primär- und Nachentladungsimpulsen kann über eine Betrachtung mit einem Oszilloskop bestimmt werden. Das dazu aufgenommene Bild wird in 
+\autoref{fig:Oszilloskop} dargestellt. Aus der Abbildung kann entnommen werden, dass der Abstand zwischen dem Primär- und Nachentladungsimpulsen circa $\num{3.7}$ Kästchen 
+in der \autoref{fig:Oszilloskop} beträgt. Ein Kästchen entspricht einem zeitlichen Abstand von $\qty{50}{\micro\second}$ daher liegen die Impulse um $\qty{185}{\micro\second}$
+auseinander.
 \begin{figure}
   \centering
   \includegraphics[width = .8\textwidth]{content/Oszilloskop_bild.jpg}
@@ -53,7 +56,9 @@ welche zum Plateau gezählt werden. Sie lautet $L = \qty{270}{\volt}$
 \label{subsec:A_Totzeit}
 Die Totzeit des verwendeten Zählrohres wird im folgendem über zwei Methode bestimmt. 
 In der ersten Methode wird die Totzeit aus einer Messung mit einem Oszilloskops bestimmt. Die aufgenommen Messdaten sind in \autoref{fig:Oszilloskop} dargestellt.
-% nochma besprechen wie dat überhaupt geht
+Die Totzeit kann bestimmt werden durch den zeitlichen Abstand vom \textit{Hauptpeak} bis zu Punkt an dem dieser die Null erreicht. \autoref{fig:Oszilloskop} kann entnommen 
+werden, dass dieser Abstand $\num{2.6}$ Kästchen entspricht. Daher folgt, äquivalent zum \autoref{subsec:Nachentladung}, dass die Totzeit über diese Methode 
+$T = \qty{130}{\micro\second}$ beträgt.
 Als zweite Methode wird die Zwei-Quellen-Methode verwendet. Bei einer Spannung $U = \qty{500}{\volt}$ und eine Messdauer von $\qty{120}{\second}$ wurde für den ersten 
 $\beta$\,-Strahler eine Zählrate $N_1 = \num{20182 +- 142}$ gemessen. Der zweite $\beta$\,-Strahler Zählrate von $N_2 = \num{16262 +- 128}$. Die Messung beider 
 Strahler zusammen ergab eine Zählrate von $N_{1+2} = \num{36370 +- 191}$. 
