--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -2,8 +2,15 @@
 \label{sec:Diskussion}
 In diesem Versuch wurde zunächst die Charakteristik des verwendeten Zählrohres bestimmt. Dabei wurde eine Plateaulänge $L = \qty{270}{\volt}$ mit einer Steigung von 
 $\qty{1.25+-0.22}{\percent\per\volt}$ bestimmt. Diese Werte zeugen von einem breiten Messintervall mit einer relativ geringen Steigung. Daher genügt das verwendete 
-Zählrohr den Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
+Zählrohr dem Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
 
+Dann wurde die Nachentladung untersucht. Dabei ergab sich ein zeitlicher Abstand der untersuchten Peaks von $\qty{185}{\micro\second}$. Zu diesem Wert kann keine sinnvolle
+Ungenauigkeit angegeben werden, allerdings ist anzumerken das anhand eine Bildes der Abstand nur bedingt genau abgelesen werden kann.  
 
-Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:Plot1.pdf} eine annähernd linearer Zusammenhang etnommen werden. Dieser stimmt mit 
-dem erwartetem Aussehen der Kurve überein weshalb diese Bestimmung im Rahmen der Messgenauigkeit als gelungen angenommen werden kann.
+Dann wurde die Totzeit über zwei unterschiedliche Methoden berechnet. Dabei ergab die Totzeit durch Bestimmung mit dem Oszilloskop $T = \qty{130}{\micro\second}$. Dahingegend
+liefert die Zwei-Quellen-Methode eine Totzeit von $T = \qty{13.53 +-49.23}{\micro\second}$. Der Wert des Oszilloskops unterliegt dem selben Fehler wie die Nachentladungszeit.
+Hier fällt eine große Diskrepanz der Werte auf. Außerdem beinhaltet die Zwei-Quellen-Methode eine großen Fehler der aufgrund der relativ kleinen Zählraten auf die 
+Possion-Verteilung zurückgeführt werden kann.
+
+Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:Plot1.pdf} eine annähernd linearer Zusammenhang entnommen werden. Dieser stimmt mit 
+dem erwartetem Aussehen der Kurve überein, weshalb diese Bestimmung im Rahmen der Messgenauigkeit als gelungen angenommen werden kann.
