--- a/v703/content/auswertung.tex
+++ b/v703/content/auswertung.tex
@@ -54,9 +54,9 @@ auseinander.
 
 \subsection{Bestimmung der Totzeit des Zählrohres}
 \label{subsec:A_Totzeit}
-Die Totzeit des verwendeten Zählrohres wird im folgendem über zwei Methode bestimmt. 
-In der ersten Methode wird die Totzeit aus einer Messung mit einem Oszilloskops bestimmt. Die aufgenommen Messdaten sind in \autoref{fig:Oszilloskop} dargestellt.
-Die Totzeit kann bestimmt werden durch den zeitlichen Abstand vom \textit{Hauptpeak} bis zu Punkt an dem dieser die Null erreicht. \autoref{fig:Oszilloskop} kann entnommen 
+Die Totzeit des verwendeten Zählrohres wird im Folgenden über zwei Methoden bestimmt. 
+In der ersten Methode wird die Totzeit aus einer Messung mit einem Oszilloskop bestimmt. Die aufgenommen Messdaten sind in \autoref{fig:Oszilloskop} dargestellt.
+Die Totzeit kann bestimmt werden durch den zeitlichen Abstand des \textit{Hauptpeaks} bis zur Stelle, an welcher die Amplitude wieder auf Null absinkt. \autoref{fig:Oszilloskop} kann entnommen 
 werden, dass dieser Abstand $\num{2.6}$ Kästchen entspricht. Daher folgt, äquivalent zum \autoref{subsec:Nachentladung}, dass die Totzeit über diese Methode 
 $T = \qty{130}{\micro\second}$ beträgt.
 Als zweite Methode wird die Zwei-Quellen-Methode verwendet. Bei einer Spannung $U = \qty{500}{\volt}$ und eine Messdauer von $\qty{120}{\second}$ wurde für den ersten 
@@ -123,7 +123,7 @@ bestimmt werden. Mit der Zwei-Quellen-Methode ergibt sich eine Totzeit des Zähl
 
 \subsection{Freigesetze Ladung des Zählrohres}
 \label{subsec:Ladung}
-Die freiwerdende Ladungsmenge $\mathrm{\Delta}Q$ kann aus der Formel \ref{eqn:Strom} durch umstellen nach $dQ$ errechnet werden. Daraus ergibt sich die Gleichung
+Die freiwerdende Ladungsmenge $\mathrm{\Delta}Q$ kann aus der \autoref{eqn:Strom} durch umstellen nach $dQ$ errechnet werden. Daraus ergibt sich die Gleichung
 \begin{equation}
   \mathrm{\Delta}Q = \frac{\overline{I}\mathrm{\Delta}t}{Ze}.
 \end{equation}
