--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -12,5 +12,5 @@ liefert die Zwei-Quellen-Methode eine Totzeit von $T = \qty{13.53 +-49.23}{\micr
 Hier fällt eine große Diskrepanz der Werte auf. Außerdem beinhaltet die Zwei-Quellen-Methode eine großen Fehler der aufgrund der relativ kleinen Zählraten auf die 
 Possion-Verteilung zurückgeführt werden kann.
 
-Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:Plot1.pdf} eine annähernd linearer Zusammenhang entnommen werden. Dieser stimmt mit 
+Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:plot1} eine annähernd linearer Zusammenhang entnommen werden. Dieser stimmt mit 
 dem erwartetem Aussehen der Kurve überein, weshalb diese Bestimmung im Rahmen der Messgenauigkeit als gelungen angenommen werden kann.
