--- a/v703/content/theorie.tex
+++ b/v703/content/theorie.tex
@@ -1,6 +1,6 @@
 \section{Zielsetzung}
 \label{sec:Ziel}
-In diesem Versuch wird die Funktionsweise und charakteristische Eigenschaften eines \textit{Geiger-Müller-Zählrohrs} untersucht. Dabei wird die Länge des Plateubereiches
+In diesem Versuch wird die Funktionsweise und charakteristische Eigenschaften eines \textit{Geiger-Müller-Zählrohrs} untersucht. Dabei wird die Länge des Plateaubereiches
 und die Totzeit des Zählrohres ermittelt.
 
 \section{Theorie}
@@ -12,7 +12,7 @@ $\alpha$-, $\beta$- oder $\gamma$-Strahlung Atome im Inneren des Zählrohres, wa
 \subsection{Funktionsweise eines Geiger-Müller-Zählrohres}
 \label{subsec:Funktion_GMZ}
 Das \textit{GMZ} besteht im Wesentlichen aus einer zylinderförmigen Kathode, in dessen Zentrum ein Anodendraht verläuft. Wie die Benennung bereits suggeriert, wird eine Spannung 
-an die beiden Bauteile angelegt. An der Vorderseite der Apparatur befindetr sich ein Eintrittsfenster aus Mylar, welches auch das Eindringen von leicht zu absorbierender
+an die beiden Bauteile angelegt. An der Vorderseite der Apparatur befindet sich ein Eintrittsfenster aus Mylar, welches auch das Eindringen von leicht zu absorbierender
 Strahlung (wie $\alpha$-Strahlung) ermöglicht. Der Innenraum des Zählrohres ist mit einem Gas (\textit{Zählgas}) gefüllt, welches mit Alkoholdämpfen versetzt ist. Auf die Funktion
 letzterer wird später eingegangen.
 Der beschriebene Aufbau des \textit{GMZ} ist in \autoref{fig:GMZ_Aufbau} dargestellt. Die Polung der anliegenden Spannung ist ebenfalls der Abbildung zu entnehmen.
@@ -49,7 +49,7 @@ Spannung verschiedene Prozesse auf. Es lassen sich verschiedene Bereiche identif
     zur Energie der Strahlung sind, gemessen werden können. Ein Detektor, welcher in diesem Bereich arbeitet wird Proportionalzählrohr genannt. Mit einem solchen
     Zählrohr können Strahlungsintensitäten und -Energien gemessen werden.
   \item[4) Geiger-Müller-Bereich]\hfill \\   
-    In diesem Bereich kommt zu Elektronenlawinen im ganzen Volumen des Zählrohres, welche durch UV-Photonen aus der primären Elektronenlawine ausgelöst werden. 
+    In diesem Bereich kommt es zu Elektronenlawinen im ganzen Volumen des Zählrohres, welche durch UV-Photonen aus der primären Elektronenlawine ausgelöst werden. 
     Da so die Proportionalität zur Primärionisation verloren geht, kann nur noch auf die Strahlungsintensität geschlossen werden. Pro einfallendem Teilchen sammelt 
     sich genügend Ladung an um diese auf einfache Weise nachweisen zu können. Dies ist der Funktionsbereich des \textit{GMZ}.
   \item[5) Entladungsbereich]\hfill \\
