--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -5,11 +5,11 @@ $\qty{1.25+-0.22}{\percent\per\volt}$ bestimmt. Diese Werte zeugen von einem bre
 Zählrohr dem Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
 
 Dann wurde die Nachentladung untersucht. Dabei ergab sich ein zeitlicher Abstand der untersuchten Peaks von $\qty{185}{\micro\second}$. Zu diesem Wert kann keine sinnvolle
-Ungenauigkeit angegeben werden, allerdings ist anzumerken das anhand eine Bildes der Abstand nur bedingt genau abgelesen werden kann.  
+Ungenauigkeit angegeben werden, allerdings ist anzumerken das anhand des Bildes der Abstand nur bedingt genau abgelesen werden kann.  
 
-Dann wurde die Totzeit über zwei unterschiedliche Methoden berechnet. Dabei ergab die Totzeit durch Bestimmung mit dem Oszilloskop $T = \qty{130}{\micro\second}$. Dahingegend
+Anschließend wurde die Totzeit über zwei unterschiedliche Methoden berechnet. Dabei ergab die Totzeit durch Bestimmung mit dem Oszilloskop $T = \qty{130}{\micro\second}$. Dahingegen
 liefert die Zwei-Quellen-Methode eine Totzeit von $T = \qty{13.53 +-49.23}{\micro\second}$. Der Wert des Oszilloskops unterliegt dem selben Fehler wie die Nachentladungszeit.
-Hier fällt eine große Diskrepanz der Werte auf. Außerdem beinhaltet die Zwei-Quellen-Methode eine großen Fehler der aufgrund der relativ kleinen Zählraten auf die 
+Hier fällt eine große Diskrepanz der Werte auf. Außerdem beinhaltet die Zwei-Quellen-Methode einen großen Fehler der aufgrund der relativ kleinen Zählraten auf die 
 Possion-Verteilung zurückgeführt werden kann.
 
 Zuletzt wurde die freigesetzte Ladung des Zählrohres untersucht. Dabei kann \autoref{fig:plot1} eine annähernd linearer Zusammenhang entnommen werden. Dieser stimmt mit 
