v400 erstellt, Vorbereitungsaufgaben und lit.bib sortiert

--- a/lit.bib
+++ b/lit.bib
@@ -4,18 +4,57 @@
   year = 2014
 }
 
-@online{v353,
-	title        = {V353 - Das Relaxationsverhalten eines RC-Kreises},
-	organization = {TU Dortmund},
-	urldate      = {2021-11-18},
-	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
+@book{Demtröder_Exp_P_1,
+	author       = {Professor Dr. Wolfgang Demtröder},
+	title        = {Experimentalphysik 1 Mechanik und Wärme},
+	publisher    = {Springer},
+	date         = {2021-11-24},
+    edition      = {4}
 }
 
-@online{v354,
-	title        = {V354 - Gedämpfte und erzwungene Schwingungen},
-	organization = {TU Dortmund},
-	urldate      = {2021-11-18},
-	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712443/mod_resource/content/1/V354.pdf},
+@book{Ingenieurwissen,
+	title 		= {Das Ingenieurwissen},
+	author 		= {Czichos, Horst and Hennecke, Manfred},
+	year 		= {2012},
+	isbn 		= {978-3-642-22850-6},
+	publisher 	= {Springer Verlag},
+}
+
+@book{czichos,
+	title 		= {Das Ingenieurwissen},
+	author 		= {Czichos, Horst and Hennecke, Manfred},
+	year 		= {2012},
+	isbn 		= {978-3-642-22850-6},
+	publisher 	= {Springer Verlag},
+}
+
+@book{physikalischesGrundpraktikum,
+	title 		= {Das neue physikalische Grundpraktikum},
+	author 		= {Eichler, Hans Joachim and Kronfeldt, Heinz-Detlef and Sahm, Jürgen},
+	year 		= {2016},
+	isbn 		= {978-3-662-49022-8},
+	publisher 	= {Springer Verlag},
+}
+
+@online{Gestis,
+	title = 	{GESTIS-Stoffdatenbank},
+	url = {https://www.dguv.de/ifa/gestis/gestis-stoffdatenbank/index.jsp},
+	urldate = {2022-06-02},
+	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
+}
+
+@online{NIST,
+	title = 	{X-Ray Transition Energies Data Base},
+	url = {https://physics.nist.gov/cgi-bin/XrayTrans/search.pl?element=Cu&lower=&upper=&units=eV},
+	urldate = {2022-04-24},
+	organization = {NIST},
+}
+
+@online{Dichlordifluormethan,
+	title = 	{Dichlordifluormethan},
+	url = {https://gestis.dguv.de/data?name=026210},
+	urldate = {2021-12-10},
+	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
 }
 
 @book{finke92,
@@ -31,6 +70,20 @@
 	organization = {Wikipedia},
 	urldate		 = {2021-11-24},
 	url 		 = {https://de.wikipedia.org/wiki/Helmholtz-Spule#/media/Datei:Helmholtz_coils.png}
+}
+
+@online{v353,
+	title        = {V353 - Das Relaxationsverhalten eines RC-Kreises},
+	organization = {TU Dortmund},
+	urldate      = {2021-11-18},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
+}
+
+@online{v354,
+	title        = {V354 - Gedämpfte und erzwungene Schwingungen},
+	organization = {TU Dortmund},
+	urldate      = {2021-11-18},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712443/mod_resource/content/1/V354.pdf},
 }
 
 @online{v105,
@@ -96,44 +149,6 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977250/mod_resource/content/4/V602.pdf},
 }
 
-@book{Demtröder_Exp_P_1,
-	author       = {Professor Dr. Wolfgang Demtröder},
-	title        = {Experimentalphysik 1 Mechanik und Wärme},
-	publisher    = {Springer},
-	date         = {2021-11-24},
-    edition      = {4}
-}
-
-@book{Ingenieurwissen,
-	title 		= {Das Ingenieurwissen},
-	author 		= {Czichos, Horst and Hennecke, Manfred},
-	year 		= {2012},
-	isbn 		= {978-3-642-22850-6},
-	publisher 	= {Springer Verlag},
-}
-
-@book{physikalischesGrundpraktikum,
-	title 		= {Das neue physikalische Grundpraktikum},
-	author 		= {Eichler, Hans Joachim and Kronfeldt, Heinz-Detlef and Sahm, Jürgen},
-	year 		= {2016},
-	isbn 		= {978-3-662-49022-8},
-	publisher 	= {Springer Verlag},
-}
-
-@online{NIST,
-	title = 	{X-Ray Transition Energies Data Base},
-	url = {https://physics.nist.gov/cgi-bin/XrayTrans/search.pl?element=Cu&lower=&upper=&units=eV},
-	urldate = {2022-04-24},
-	organization = {NIST},
-}
-
-@online{Dichlordifluormethan,
-	title = 	{Dichlordifluormethan},
-	url = {https://gestis.dguv.de/data?name=026210},
-	urldate = {2021-12-10},
-	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
-}
-
 @online{v606,
 	title        = {V606 - Messung der Suszeptibilität paramagentischer Stoffe},
 	organization = {TU Dortmund},
@@ -176,16 +191,16 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/2005007/mod_resource/content/2/V704.pdf},
 }
 
-@online{Gestis,
-	title = 	{GESTIS-Stoffdatenbank},
-	url = {https://www.dguv.de/ifa/gestis/gestis-stoffdatenbank/index.jsp},
-	urldate = {2022-06-02},
-	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
-}
-
 @online{v703,
 	title        = {703 - Das Geiger-Müller-Zählrohr},
 	organization = {TU Dortmund},
 	urldate      = {2022-06-08},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977248/mod_resource/content/2/V703.pdf},
+}
+
+@online{v400,
+	title        = {400 - Reflexion, Brechung und Beugung},
+	organization = {TU Dortmund},
+	urldate      = {2022-06-14},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933349/mod_resource/content/5/V400.pdf},
 }
