--- a/v703/content/anhang.tex
+++ b/v703/content/anhang.tex
@@ -5,12 +5,12 @@
 
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 1, scale=0.75]{content/MessdatenV703.pdf}
 \end{figure}
 
 \newpage
 
 \begin{figure}
     \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 2, scale=0.75]{content/MessdatenV703.pdf}
 \end{figure}
